verze s kapitolou 2-wire pro Radka

--- a/text/jtag_2w.tex
+++ b/text/jtag_2w.tex
@@ -2,7 +2,7 @@
 %				projít si jak nazývám DTS a TS
 
 \chapter{Návrh a implementace modulu pro dvouvodičový \acs{JTAG} protokol}
-Tato kapitola popisuje princip fungování dvouvodičového \acs{JTAG} rozhraní s možností přepnutí na původní čtyřvodičovou variantu a zpět. Popsána je zde také aktivační sekvence pro výběr jedné z těchto dvou variant komunikace, definovaná standardem IEEE 1149.7. V této kapitole je také popsán způsob implementace modulu pro zpracování aktivační sekvence a převod dvouvodičového \acs{JTAG} rozhraní na původní čtyřvodičové, pokud je zvolena dvouvodičová varianta.
+Tato kapitola se zaměřuje na princip fungování dvouvodičového \acs{JTAG} rozhraní s možností přepnutí na původní čtyřvodičovou variantu a zpět. Popsána je zde také aktivační sekvence pro výběr jedné z těchto dvou variant komunikace, definovaná standardem IEEE 1149.7. V této kapitole je také uveden způsob implementace modulu pro zpracování aktivační sekvence a převod dvouvodičového \acs{JTAG} rozhraní na původní čtyřvodičové, pokud je zvolena dvouvodičová varianta.
 	
 \section{Účel redukce počtu pinů \acs{JTAG} rozhraní}	\label{sec:2w_interface}
 Důvodem pro snížení počtu pinů potřebných pro testování integrovaných obvodů je možnost využít dva volné piny k jinému účelu během testování, například pro jejich běžnou funkci, kterou mají mimo testovací režim. Dvouvodičové \acs{JTAG} rozhraní je definováno standardem IEEE 1149.7 a je nazýváno \textbf{compact \acs{JTAG}} (c\acs{JTAG}). Dvouvodičové rozhraní využívá ke komunikaci piny \acs{TCK} a \acs{TMS}, které mají pro dvouvodičovou variantu označení s příponou C (compact), tedy \acs{TCKC} a \acs{TMSC}. \cite{IEEE_1149-7} \cite{JTAG}
@@ -20,7 +20,7 @@ Dvouvodičová varianta podporuje zapojení ve hvězdicové topologii, jak je vi
 Nevýhodou dvouvodičové varianty \acs{JTAG} rozhraní je potřeba serializace jednotlivých signálu původního čtyřvodičového rozhraní. Z tohoto důvodu je přenos dat pomocí dvouvodičové varianty v nejlepším případě 3-krát pomalejší než v případě původní čtyřvodičové. \cite{IEEE_1149-7}
 \section{Serializace signálů čtyřvodičového \acs{JTAG} rozhraní na dvouvodičové}	\label{sec:oscan1} 
 
-Pro dvouvodičovou variantu \acs{JTAG} komunikace je zapotřebí odesílat hodnoty signálů původního čtyřvodičového \acs{JTAG} protokolu sériově, v rámci jediného signálu \acs{TMSC}. Standard IEEE 1149.7 definuje několik verzí formátu serializace dat. Pro návrh popisovaný v této práci byl vybrán základní formát OSCAN1, který definuje prostou serializaci hodnot \acs{TDI}, \acs{TMS} a \acs{TDO} signálů. Formát OSCAN1 je zobrazen na obrázku \ref{fig:oscan}, kde je obecně naznačena předcházející aktivační sekvence. První bit formátu má hodnotu negace \acs{TDI} signálu, druhým bitem je přenesena hodnota \acs{TMS} a třetím je přenášena hodnota \acs{TDO}	opačným směrem. \cite{IEEE_1149-7}
+Pro dvouvodičovou variantu \acs{JTAG} komunikace je zapotřebí odesílat hodnoty signálů původního čtyřvodičového \acs{JTAG} protokolu sériově, v rámci jediného signálu \acs{TMSC}. Standard IEEE 1149.7 definuje několik verzí formátu serializace dat. Pro návrh popisovaný v této práci byl vybrán základní formát OSCAN1, který definuje prostou serializaci hodnot \acs{TDI}, \acs{TMS} a \acs{TDO} signálů. Formát OSCAN1 je zobrazen na obrázku \ref{fig:oscan}, kde je obecně naznačena předcházející aktivační sekvence. První bit formátu nese hodnotu negace \acs{TDI} signálu, druhým bitem je přenesena hodnota \acs{TMS} signálu a třetím je přenášena hodnota \acs{TDO} signálu	opačným směrem. \cite{IEEE_1149-7}
 
 \begin{figure}[!h]
   \begin{center}
@@ -31,7 +31,7 @@ Pro dvouvodičovou variantu \acs{JTAG} komunikace je zapotřebí odesílat hodno
 \end{figure}
     
 \subsection{Řízení úrovně na \acs{TMSC} pinu}	\label{subsec:oscan1_drive} 
-Při komunikaci pomocí dvouvodičového \acs{JTAG} rozhraní se stává pin \acs{TMSC} obousměrným, jelikož jsou přenášeny výstupní testovací data opačným směrem, z \acs{JTAG} systému do debuggeru. Z toho důvodu musí být ošetřena možnost buzení pinu současně z obou směrů. Proto je standardem IEEE 1149.7 definováno pravidlo pro buzení \acs{TMSC} pinu během komunikace. Na obrázku \ref{fig:oscan_drive} je znázorněn průběh komunikace v OSCAN1 formátu, kde jsou přehledně znázorněny okamžiky buzení \acs{TMSC} pinu debuggerem (\acs{DTS}) a \acs{JTAG} systémem (\acs{TS}). Znázorněn je také průběh skutečné hodnoty na \acs{TMSC} pinu, kde je možné si všimnout, že při střídání směrů buzení je na pinu \acs{TMSC} zaručen stav vysoké impedance po dobu poloviny periody hodinového signálu \acs{TCKC}. Tímto je ošetřen vznik konfliktu v buzení \acs{TMSC} pinu. \cite{IEEE_1149-7}
+Při komunikaci pomocí dvouvodičového \acs{JTAG} rozhraní se stává pin \acs{TMSC} obousměrným, jelikož jsou přenášeny výstupní testovací data opačným směrem z \acs{JTAG} systému do debuggeru. Z toho důvodu musí být ošetřena možnost buzení pinu současně z obou směrů. Proto je standardem IEEE 1149.7 definováno pravidlo pro buzení \acs{TMSC} pinu během komunikace. Na obrázku \ref{fig:oscan_drive} je znázorněn průběh komunikace v OSCAN1 formátu, kde jsou přehledně znázorněny okamžiky buzení \acs{TMSC} pinu debuggerem (\acs{DTS}) a \acs{JTAG} systémem (\acs{TS}). Znázorněn je také průběh skutečné hodnoty na \acs{TMSC} pinu, kde je možné si všimnout, že při střídání směrů buzení je na pinu \acs{TMSC} zaručen stav vysoké impedance po dobu poloviny periody hodinového signálu \acs{TCKC}. Tímto je ošetřen vznik konfliktu v buzení \acs{TMSC} pinu. \cite{IEEE_1149-7}
 
 \begin{figure}[!h]
   \begin{center}
@@ -80,7 +80,7 @@ Sekvence výběru varianty \acs{JTAG} protokolu je zobrazena v druhé části ob
 \end{table}
 
 \subsubsection{Část pro výběr konkrétní čtyř nebo dvouvodičové varianty - \acs{OAC}}
-První část sekvence má konstantní délku 4 bity. První dva bity musí mít pro správnou aktivaci hodnotu log. 0. Další dva bity definují výběr topologie, na které je \acs{JTAG} zařízení připojeno. Na výběr jsou možnosti sériové topologie, tedy čtyřvodičové zapojení s jedním nebo více zařízeními zapojenými do série. Dalšími možnostmi jsou zapojení ve hvězdicové topologii ve dvou a čtyřvodičové variantě. Pro popisované navržené řešení je podstatná sériová topologie a dvouvodičová varianta hvězdicové topologie, které odpovídají hodnotám \acs{OAC} dle tabulky \ref{tab:oac}. \cite{IEEE_1149-7}
+První část sekvence má konstantní délku 4 bity. První dva bity musí mít pro správnou aktivaci hodnotu log. 0. Další dva bity definují výběr topologie, na které je \acs{JTAG} zařízení připojeno. Na výběr je možnost sériové topologie, tedy čtyřvodičové zapojení s jedním nebo více zařízeními zapojenými do série. Další možností je zapojení ve hvězdicové topologii, a to ve dvou nebo čtyřvodičové variantě. Pro navržené řešení je podstatná sériová topologie a dvouvodičová varianta hvězdicové topologie, které odpovídají hodnotám \acs{OAC} dle tabulky \ref{tab:oac}. \cite{IEEE_1149-7}
 
 \begin{table}[!h]
   \caption{Tabulka významu OAC hodnot. \cite{IEEE_1149-7}}
@@ -101,12 +101,12 @@ První část sekvence má konstantní délku 4 bity. První dva bity musí mít
 \end{table}
 
 \subsubsection{Část rozšiřující informace o výběru varianty - \acs{EC}}
-Druhou částí aktivační sekvence je čtyřbitová hodnota nazvaná \acl{EC}. Tato hodnota pouze doplňuje informace o výběru varianty \acs{JTAG} komunikace. První tři bity udávají informace o výchozím stavu řídicího stavového automatu \acs{TAP} a o dodatečné ochraně před současným buzením pinů \acs{TMS} a \acs{TDO}. Hodnoty těchto bitů budou v rámci navrženého řešení uvažovány jako log. 0. Výchozí stav stavového automatu je tak \textit{Run-Test/Idle} nebo \textit{Test-Logic-Reset} a dodatečná ochrana je deaktivovaná. Nejvíce významný bit (\acs{MSB}) nese informaci o krátké nebo dlouhé variantě popisované aktivační sekvence. Dlouhá forma aktivační sekvence obsahuje navíc hodnotu registru pro funkcionalitu, která není v návrhu implementována. Z tohoto důvodu musí být vždy zvolena krátká forma aktivační sekvence, které odpovídá hodnota log. 1 tohoto bitu. Hodnota této části aktivační sekvence musí být tedy vždy 1000. \cite{IEEE_1149-7}
+Druhou částí aktivační sekvence je čtyřbitová hodnota nazvaná \acl{EC}. Tato hodnota pouze doplňuje informace o výběru varianty \acs{JTAG} komunikace. První tři bity udávají informace o výchozím stavu řídicího stavového automatu \acs{TAP} a o dodatečné ochraně před současným buzením pinů \acs{TMS} a \acs{TDO}. Hodnoty těchto bitů budou v rámci navrženého řešení uvažovány jako log. 0. Výchozí stav stavového automatu je tak \textit{Run-Test/Idle} nebo \textit{Test-Logic-Reset} a dodatečná ochrana je deaktivovaná. Nejvíce významný bit (\acs{MSB}) nese informaci o krátké, nebo dlouhé variantě popisované aktivační sekvence. Dlouhá forma aktivační sekvence obsahuje navíc hodnotu registru pro funkcionalitu, která není v návrhu implementována. Z tohoto důvodu musí být vždy zvolena krátká forma aktivační sekvence, které odpovídá hodnota log. 1 tohoto bitu. Hodnota této části aktivační sekvence musí být tedy vždy 1000. \cite{IEEE_1149-7}
 
 \subsubsection{Kontrolní část - \acs{CP}}
-Poslední část aktivační sekvence slouží k prodloužení sekvence ze strany debuggeru nebo k vyvolání resetu. Prodloužení sekvence může být pro některé implementace debuggerů výhodné, pokud je třeba prodlevu před začátkem samotné komunikace pro přípravu dat. Možnost sekvenci prodloužit je v návrhu popsaného v této kapitole realizováno. Vyvolání resetu v rámci aktivační sekvence není navrženým řešením podporováno. \cite{IEEE_1149-7}
+Poslední část aktivační sekvence slouží k prodloužení sekvence ze strany debuggeru nebo k vyvolání resetu. Prodloužení sekvence může být pro některé implementace debuggerů výhodné, pokud je třeba prodleva před začátkem samotné komunikace pro přípravu dat. Možnost sekvenci prodloužit je v návrhu popsaném v této kapitole realizováno. Vyvolání resetu v rámci aktivační sekvence není navrženým řešením podporováno. \cite{IEEE_1149-7}
 
-Formát této části sekvence je zobrazen v tabulce \ref{tab:cJTAG_sel_cp}. Jednobitová hodnota první části \textit{Preamble} je \acs{JTAG} systémem ignorována a na její hodnotě nezáleží. Nicméně je doporučeno, aby byla tato hodnota stejná jako hodnota prvního bitu následující části \textit{Body}. Tato perioda hodinového signálu \acs{TCKC} může sloužit debuggeru jako čas pro změnu zdroje buzení \acs{TMSC} pinu. Následuje část těla kontrolní části sekvence, která může nabývat hodnot dle tabulky \ref{tab:cp_body}, kde je popsaný taky význam těchto hodnot. Poslední částí je jednobitová hodnota \textit{Postamble}, která je \acs{JTAG} systémem také ignorována, přičemž je doporučeno použít stejnou hodnotu jako poslední bit části \textit{Body}. \cite{IEEE_1149-7}              
+Formát této části sekvence je zobrazen v tabulce \ref{tab:cJTAG_sel_cp}. Jednobitová hodnota první části \textit{Preamble} je \acs{JTAG} systémem ignorována a na její hodnotě nezáleží. Nicméně je doporučeno, aby byla tato hodnota stejná jako hodnota prvního bitu následující části \textit{Body}. Tato perioda hodinového signálu \acs{TCKC} může sloužit debuggeru jako čas pro změnu zdroje buzení \acs{TMSC} pinu. Následuje část těla kontrolní části sekvence, která může nabývat hodnot dle tabulky \ref{tab:cp_body}, kde je definován také význam těchto hodnot. Poslední částí je jednobitová hodnota \textit{Postamble}, která je \acs{JTAG} systémem také ignorována, přičemž je doporučeno použít stejnou hodnotu jako poslední bit části \textit{Body}. \cite{IEEE_1149-7}              
 
 \begin{table}[H]
   \caption{Formát kontrolní části sekvence pro výběr varianty \acs{JTAG} protokolu \cite{IEEE_1149-7}}
@@ -141,7 +141,7 @@ Formát této části sekvence je zobrazen v tabulce \ref{tab:cJTAG_sel_cp}. Jed
 	\label{tab:cp_body}
 \end{table}
 
-Jelikož navrženým systémem je podporováno pouze prodloužení aktivační sekvence, tedy hodnota CP\_BODY = CP\_NOP zakončení sekvence hodnotou \\CP\_BODY = CP\_END, je na obrázku \ref{fig:cJTAG_sel_cp_nop} zobrazen průběh sekvence v případě jejího prodloužení. Hodnota těla kontrolní části pro prodloužení sekvence o jeden bit může nabývat hodnot 01 nebo 10 dle tabulky \ref{tab:cp_body}. Proto je tedy sekvence prodlužována střídáním hodnot log. 0 a 1 na \acs{TMSC} pinu, přičemž se uvažují poslední dva bity CP\_BODY, které nabývají požadovaných hodnot CP\_NOP. Sekvence bude ukončena odesláním hodnoty CP\_END (00), jak zobrazeno na konci vyznačené části \textit{Body}.
+Jelikož navrženým systémem je podporováno pouze prodloužení aktivační sekvence, tedy hodnota CP\_BODY = CP\_NOP zakončení sekvence hodnotou \\CP\_BODY = CP\_END, je na obrázku \ref{fig:cJTAG_sel_cp_nop} zobrazen průběh sekvence v případě jejího prodloužení. Hodnota těla kontrolní části pro prodloužení sekvence o jeden bit může nabývat hodnot 01 nebo 10 dle tabulky \ref{tab:cp_body}. Proto je tedy sekvence prodlužována střídáním hodnot log. 0 a 1 na \acs{TMSC} pinu, přičemž se uvažují poslední dva bity CP\_BODY, které nabývají požadovaných hodnot CP\_NOP. Sekvence bude ukončena odesláním hodnoty CP\_END (00), jak je zobrazeno na konci vyznačené části \textit{Body}.
 
 \begin{figure}[!h]
   \begin{center}
@@ -158,15 +158,15 @@ Navržený obvod pro detekci aktivační sekvence a převod vstupních signálů
 %TODO: - nakreslit blok a v nem muxování a clk gating 
 %			- zduraznit ze to nema rychlejsi hod signal
 %			- výchozí stav je 4 protoze... 			
-Navržený modul je obecně zobrazen na obrázku \ref{fig:cJTAG_bridge}, kde je možné vidět princip převodu mezi čtyřvodičovou variantou \acs{JTAG} rozhraní a dvou nebo čtyřvodičovou variantou na vstupně/výstupních pinech čipu. Jakmile je přijata aktivační sekvence je obvodem nastaven signál \textit{jtag\_2w\_en} podle vybrané varianty protokolu.
+Navržený modul je obecně zobrazen na obrázku \ref{fig:cJTAG_bridge}, kde je možné vidět princip převodu mezi čtyřvodičovou variantou \acs{JTAG} rozhraní a dvou nebo čtyřvodičovou variantou na vstupně/výstupních pinech čipu. Jakmile je přijata aktivační sekvence, je obvodem nastaven signál \textit{jtag\_2w\_en} podle vybrané varianty protokolu.
 
-Pokud je vybrána čtyřvodičová varianta (\textit{jtag\_2w\_en = 0}) jsou signály vstupního rozhraní pouze propojeny skrz tento modul. Pro signály TDI, TMS a TDO\_OEN je tak docíleno pomocí multiplexorů. Hodinový signál TCK(C) je propagován dále do obvodu prostřednictvím buňky pro "clock gating", nastavením povolovacího signálu \textit{tckc\_en}. Vstupně/výstupní pin \acs{TMSC} je v případě čtyřvodičové varianty rozdělen na vstup TMS a výstup TDO, což je řízeno dle hodnoty výstupního signálu \textit{jtag\_2w\_en} bloku \textit{cJTAG\_adapter}. Na obrázku je pin označen TMS(C)/TDO, čímž je naznačeno rozdělení pinů dle vybrané varianty. Výstupy modulu \textit{tmsc\_tdo\_out} a \textit{tmsc\_tdo\_oen} nesou tedy společnou funkci pro \acs{TMSC} a TDO signály.
+Pokud je vybrána čtyřvodičová varianta (\textit{jtag\_2w\_en = 0}) jsou signály vstupního rozhraní pouze propojeny skrz tento modul. U signálů TDI, TMS a TDO\_OEN je toho docíleno pomocí multiplexorů. Hodinový signál TCK(C) je propagován dále do obvodu, prostřednictvím buňky pro "clock gating", nastavením povolovacího signálu \textit{tckc\_en}. Vstupně/výstupní pin \acs{TMSC} je v případě čtyřvodičové varianty rozdělen na vstup TMS a výstup TDO, což je řízeno dle hodnoty výstupního signálu \textit{jtag\_2w\_en} bloku \textit{cJTAG\_adapter}. Na obrázku je pin označen TMS(C)/TDO, čímž je naznačeno rozdělení pinů dle vybrané varianty. Výstupy modulu \textit{tmsc\_tdo\_out} a \textit{tmsc\_tdo\_oen} nesou tedy společnou funkci pro \acs{TMSC} a TDO signály.
 
 V případě výběru dvouvodičové varianty jsou multiplexory přepnuty na interní signály, které jsou generované dle formátu serializace dat na \acs{TMSC} pin uvedeného v podkapitole \ref{sec:oscan1}. Signály \textit{tms\_4w\_i} a \textit{tdi\_4w\_i} nesou hodnotu \acs{TMSC} navzorkovanou nástupnou hranou \acs{TCKC} hodinového signálu, dle aktuálního stavu stavového automatu popsaného v podkapitole \ref{subsec:oscan1_fsm}. Hodinový signál TCK je propagován nastavením povolovacího signálu \textit{tckc\_en} pouze v rámci posledního bitu (TDO) formátu OSCAN1. Aby bylo docíleno buzení \acs{TMSC} pinu pouze po dobu poloviny periody hodinového signálu, jak je popsáno v podkapitole \ref{subsec:oscan1_drive}, musí být výstup \textit{tmsc\_tdo\_oen} deaktivován s nástupnou hranou hodinového signálu \acs{TCKC}. Pro docílení této funkcionality je na obrázku naznačena část s klopným obvodem a logickým hradlem \textit{AND}. Signál \textit{tmsc\_oen\_i} je výstupem stavového automatu popsaného v podkapitole \ref{subsec:oscan1_fsm}.
 
-Výchozím stavem modulu je varianta čtyřvodičové komunikace, přičemž veškeré části obvodu jsou po uvolnění asynchronního resetu TRST\_N nastaveny jakoby aktivační sekvence této varianty již proběhla. Důvodem pro volbu této varianty je především zachování stávající funkcionality obvodu při použití stávajících ladících nástrojů. To je také důvodem proč není vyžadováno odeslání aktivační sekvence, jelikož není ve stávajícím debuggeru implmentována.
+Výchozím stavem modulu je varianta čtyřvodičové komunikace, přičemž veškeré části obvodu jsou po uvolnění asynchronního resetu TRST\_N nastaveny, jakoby aktivační sekvence této varianty již proběhla. Důvodem pro volbu této varianty je především zachování stávající funkcionality obvodu při použití stávajících ladících nástrojů. To je také důvodem, proč není vyžadováno odeslání aktivační sekvence, jelikož není ve stávajícím debuggeru implmentována.
 
-Navržený obvod je taktován pouze testovacím hodinovým signálem \acs{TCKC} a není tak třeba ošetřovat přechody mezi hodinovými doménami. Toto řešení ovšem přineslo při návrhu nemožnost využít vyšší hodinové frekvence k vzorkování hodnot na signálech \acs{JTAG} rozhraní, což je vidět například na části obvodu pro detekci úvodní sekvence, jejíž schéma je vidět na obrázku \ref{fig:cJTAG_escape_circuit}, kde se pro detekci pulsů na \acs{TMSC} pinu využívá použití \acs{TMSC} jako hodinového signálu pro některé klopné obvody.
+Navržený obvod je taktován pouze testovacím hodinovým signálem \acs{TCKC}, a není tedy třeba ošetřovat přechody mezi hodinovými doménami. Toto řešení ovšem přineslo při návrhu nemožnost využít vyšší hodinové frekvence k vzorkování hodnot na signálech \acs{JTAG} rozhraní, což je vidět například na části obvodu pro detekci úvodní sekvence, jejíž schéma je vidět na obrázku \ref{fig:cJTAG_escape_circuit}, kde se pro detekci pulsů na \acs{TMSC} pinu využívá použití \acs{TMSC} jako hodinového signálu pro některé klopné obvody.
 
 \begin{figure}[!h]
   \begin{center}
@@ -177,11 +177,11 @@ Navržený obvod je taktován pouze testovacím hodinovým signálem \acs{TCKC} 
 \end{figure}
 
 \subsection{Detekce úvodní sekvence pro přepnutí \acs{JTAG} protokolu}	\label{subsec:sel_escape_det}
-Pro detekci sekvence určené pro přepínání mezi dvou a čtyřvodičovou variantou \acs{JTAG} protokolu, popsané v kapitole \ref{subsec:sel_escape}, byl navržen obvod jehož schéma je zobrazeno na obrázku \ref{fig:cJTAG_escape_circuit}. Tato implementace obvodu pro detekci byla inspirována, příkladem možné implementace uvedeném ve standardu IEEE 1149.7.
+Pro detekci sekvence určené pro přepínání mezi dvou a čtyřvodičovou variantou \acs{JTAG} protokolu, popsané v kapitole \ref{subsec:sel_escape}, byl navržen obvod, jehož schéma je zobrazeno na obrázku \ref{fig:cJTAG_escape_circuit}. Tato implementace obvodu pro detekci byla inspirována příkladem možné implementace uvedeném ve standardu IEEE 1149.7.
 
 Jelikož "Escape" sekvence spočívá v generování pulsů na signálu \acs{TMSC} v době, kdy je signál \acs{TCKC} držen v log. 1. je zapotřebí pulsy detekovat. V obvodu na obrázku se nachází 4-bitový posuvný registr, na jehož sériový vstup je přivedena hodnota log. 1. Na tento posuvný registr je přiveden hodinový signál \textit{sr\_clk}, který je generován logickou funkci \textit{XNOR}, tedy ekvivalencí referenčního signálu \textit{tmsc\_fq} navzorkovaného poslední sestupnou hranou hodinového signálu \acs{TCKC}. Podle hodnoty posuvného registru je poté nastaven vždy jeden ze signálů \textit{reset\_detect}, \textit{select\_detect}, \textit{deselect\_detect} nebo \textit{custom\_detect}. Díky použití hradel s logickou funkcí \textit{AND} s negovaným vstupem je nastaven pouze jeden ze signálů, podle počtu nástupných hran vygenerovaných na vstupu \acs{TMSC}, během \acs{TCKC} signálu setrvávajícího na úrovni log. 1. 
 
-Neméně důležitou částí obvodu jsou dva klopné obvody generující asynchronní reset \textit{(sr\_rst\_n)} pro posuvný registr. Reset je třeba generovat vždy případě hodnoty log. 0 na hodinovém signálu \acs{TCKC}, protože posuvný registr musí být resetován vždy mimo "Escape" sekvenci. Jelikož reset posuvného registru je aktivní při hodnotě log. 0, je tedy generován sestupnou hranou signálu \acs{TCKC}, která překlopí první klopný obvod a hodnoty na vstupu hradla \textit{XNOR} budou rozdílné. Nástupná hrana signálu \acs{TCKC} překlopí druhý klopný obvod a vstupy hradla budou vždy totožné, čímž je reset vždy uvolněn.
+Neméně důležitou částí obvodu jsou dva klopné obvody generující asynchronní reset \textit{(sr\_rst\_n)} pro posuvný registr. Reset je třeba generovat vždy v případě hodnoty log. 0 na hodinovém signálu \acs{TCKC}, protože posuvný registr musí být resetován vždy mimo "Escape" sekvenci. Jelikož reset posuvného registru je aktivní při hodnotě log. 0, je tedy generován sestupnou hranou signálu \acs{TCKC}, která překlopí první klopný obvod a hodnoty na vstupu hradla \textit{XNOR} budou rozdílné. Nástupná hrana signálu \acs{TCKC} překlopí druhý klopný obvod a vstupy hradla budou vždy totožné, čímž je reset vždy uvolněn.
 
 Jelikož pro návrh popsaný v této kapitole je uvažována pouze detekce tří pulsů ("Selection Sequence"), je dále obvodem zpracováván pouze signál \textit{select\_detect}. Ostatní signály příslušející jiným variantám nejsou dále využívány, ale jsou generovány dle obvodu na obrázku pro případné budoucí využití.
 
@@ -194,16 +194,16 @@ Jelikož pro návrh popsaný v této kapitole je uvažována pouze detekce tří
 \end{figure}
 
 \subsection{Zpracování sekvence pro výběr varianty \acs{JTAG} protokolu}	\label{subsec:sel_seq_det}
-Za účelem zpracování sekvence pro výběr dvou či čtyřvodičové varianty \acs{JTAG} protokolu byl návrh obvodu rozdělen na dvě části, pro zpracování konkrétních úseků sekvence uvedených v tabulce \ref{tab:cJTAG_sel}. První část je prostým porovnáním přijatých hodnot \acs{OAC} a \acs{EC} s konstantou. Druhá část realizuje detekci prodloužení aktivační sekvence podle přijatých hodnot v části \acs{CP}.
+Za účelem zpracování sekvence pro výběr dvou či čtyřvodičové varianty \acs{JTAG} protokolu byl návrh obvodu rozdělen na dvě části pro zpracování konkrétních úseků sekvence uvedených v tabulce \ref{tab:cJTAG_sel}. První část je prostým porovnáním přijatých hodnot \acs{OAC} a \acs{EC} s konstantou. Druhá část realizuje detekci prodloužení aktivační sekvence podle přijatých hodnot v části \acs{CP}.
 
 \subsubsection{Část obvodu pro výběr konkrétní dvou nebo čtyřvodičové varianty a rozšiřující části}
-Pro porovnání prvních dvou částí aktivační sekvence byla navržena část obvodu znázorněná na obrázku \ref{fig:cJTAG_sel_oac_ec_circuit}. Tato část obvodu realizuje porovnání přijatých hodnot \acs{OAC} a \acs{EC} s podporovanými možnostmi dle tabulky \ref{tab:oac} (hodnota části \acs{EC} může nabývat pouze hodnoty 1000).
+Pro porovnání prvních dvou částí aktivační sekvence byla navržena část obvodu znázorněna na obrázku \ref{fig:cJTAG_sel_oac_ec_circuit}. Tato část obvodu realizuje porovnání přijatých hodnot \acs{OAC} a \acs{EC} s podporovanými možnostmi dle tabulky \ref{tab:oac} (hodnota části \acs{EC} může nabývat pouze hodnoty 1000).
 
-Obvod obsahuje 8-bitový posuvný registr (\textit{sel\_sreg}) pro příjem hodnoty sekvence a 3-bitový čítač (\textit{sel\_cnt}) pro počítání 8 přijatých bitů. Tento registr a čítač má vstup povolující hodinový signál CE (Clock Enable). Signál povolující příjem hodnoty je nastaven do hodnoty log. 1 po skončení "Escape" sekvence a to se sestupnou hranou hodinového signálu \acs{TCKC}, kdy je hodnota signálu \textit{select\_detect} log. 1 vygenerovaná předchozí částí obvodu uvedené na obrázku \ref{fig:cJTAG_escape_circuit}. Jakmile čítač napočítá 8 přijatých bitů a je posuvný registr deaktivován setrvává v něm přijatá 8-bitová hodnota. Signál CE je nastaven na hodnotu log. 0 po dokončení čítání, kdy čítač nastaví výstup TC (Terminal Count) do log. 1 a tím je na vstup prvního klopného obvodu přivedena log. 0.
+Obvod obsahuje 8-bitový posuvný registr (\textit{sel\_sreg}) pro příjem hodnoty sekvence a 3-bitový čítač (\textit{sel\_cnt}) pro počítání 8 přijatých bitů. Tento registr a čítač má vstup povolující hodinový signál CE (Clock Enable). Signál povolující příjem hodnoty je nastaven do hodnoty log. 1 po skončení "Escape" sekvence, a to se sestupnou hranou hodinového signálu \acs{TCKC}, kdy je hodnota signálu \textit{select\_detect} log. 1 vygenerovaná předchozí částí obvodu uvedené na obrázku \ref{fig:cJTAG_escape_circuit}. Jakmile čítač napočítá 8 přijatých bitů a je posuvný registr deaktivován, setrvává v něm přijatá 8-bitová hodnota. Signál CE je nastaven na hodnotu log. 0 po dokončení čítání, kdy čítač nastaví výstup TC (Terminal Count) do log. 1 a tím je na vstup prvního klopného obvodu přivedena log. 0.
 
-Hodnota přijatá posuvným registrem je porovnávána se dvěma konstantami, které určují zvolenou variantu \acs{JTAG} protokolu. Pokud je zvolena dvouvodičová varianta je nastaven signál \textit{jtag\_2w\_en}, povolující funkcionalitu pro zpracování komunikace v dvouvodičové variantě. Zejména se jedná o multiplexory propojující \acs{JTAG} signály pro další zpracování a stavový automat pro  zpracování formátu OSCAN1 popsaného v kapitol \ref{sec:oscan1}. Pokud hodnota posuvného registru shodná s jednou z konstant a čítač napočítal 8 nasunutých bitů je hodnota signálu \textit{sel\_seq\_match} nastavena do log. 1 a je tak aktivován obvod pro zpracování poslední části aktivační sekvence, jehož schéma je uvedeno na obrázku \ref{fig:cJTAG_sel_cp_circuit}. 
+Hodnota přijatá posuvným registrem je porovnávána se dvěma konstantami, které určují zvolenou variantu \acs{JTAG} protokolu. Pokud je zvolena dvouvodičová varianta, je nastaven signál \textit{jtag\_2w\_en} povolující funkcionalitu pro zpracování komunikace v dvouvodičové variantě. Zejména se jedná o multiplexory propojující \acs{JTAG} signály pro další zpracování a stavový automat pro  zpracování formátu OSCAN1 popsaného v podkapitole \ref{sec:oscan1}. Pokud je hodnota posuvného registru shodná s jednou z konstant a čítač napočítal 8 nasunutých bitů, je hodnota signálu \textit{sel\_seq\_match} nastavena do log. 1 a je tak aktivován obvod pro zpracování poslední části aktivační sekvence, jehož schéma je uvedeno na obrázku \ref{fig:cJTAG_sel_cp_circuit}. 
 
-\begin{figure}[H]
+\begin{figure}[H]s
   \begin{center}
     \includegraphics[scale=0.78]{obrazky/cJTAG_sel_oac_ec_circuit.pdf}
   \end{center}
@@ -214,11 +214,11 @@ Hodnota přijatá posuvným registrem je porovnávána se dvěma konstantami, kt
 \subsubsection{Část obvodu pro pro zpracování kontrolní části aktivační sekvence}
 Pro poslední část aktivační sekvence byl navržen a implementován obvod zobrazený na obrázku \ref{fig:cJTAG_sel_cp_circuit}. Popsaný obvod podporuje prodloužení sekvence při příjmu hodnoty CP\_NOP a následné ukončení sekvence hodnotou CP\_END, které jsou definované v tabulce \ref{tab:cp_body}. % Nejkratší možnou variantou kontrolní části aktivační sekvence je 
 
-Obvod na obrázku je aktivován jakmile předcházející část obvodu uvedená na obrázku \ref{fig:cJTAG_sel_oac_ec_circuit} vyhodnotí shodu hodnoty s jednou z konstant pro výběr varianty \acs{JTAG} protokolu (nastaví se signál \textit{sel\_seq\_match}). V tomto hodinovém taktu je povolen 2 a 3-bitový posuvný registr signálem \textit{CE}. Dvoubitový posuvný registr, jehož vstupem je signál \acs{TMSC}, slouží k vyhodnocení hodnoty CP\_END. Jakmile je hodnota tohoto posuvného registru 00, což odpovídá hodnotě CP\_END pro ukončení sekvence výstupem logické funkce \textit{NOR} log. 1.
+Obvod na obrázku je aktivován jakmile předcházející část obvodu uvedená na obrázku \ref{fig:cJTAG_sel_oac_ec_circuit} vyhodnotí shodu hodnoty s jednou z konstant pro výběr varianty \acs{JTAG} protokolu (nastaví se signál \textit{sel\_seq\_match}). V tomto hodinovém taktu je povolen 2 a 3-bitový posuvný registr signálem \textit{CE}. Dvoubitový posuvný registr, jehož vstupem je signál \acs{TMSC}, slouží k vyhodnocení hodnoty CP\_END. Jakmile je hodnota tohoto posuvného registru 00, což odpovídá hodnotě CP\_END ukončující sekvenci, je výstupem logické funkce \textit{NOR} log. 1.
 
-Tříbitový posuvný registr slouží k povolení detekce hodnoty CP\_END, nejdříve po třech hodinových taktech \acs{TCKC}. Důvodem pro zdržení vyhodnocení hodnoty je zpožděno o tři takty, protože nejkratší možná délka této části sekvence jsou 4 bity. Platná hodnota část CP\_BODY je tudíž nasunuta do 2-bitového posuvného registru nejdříve po třech taktech \acs{TCKC}, dle průběhu na obrázku \ref{fig:cJTAG_sel_cp_nop}. Tento posuvný registr je vždy před aktivační sekvencí synchronně resetován signálem \textit{sel\_rst}, který je generován vždy po skončení úvodní sekvence popsané v kapitole \ref{subsec:sel_escape_det}. Tuto deaktivaci po dobu tří taktů by bylo možné realizovat také čítačem od 0 do 3. Tato varianta řešení by ušetřila jeden klopný obvod, ale přidala jedno logické hradlo. Z hlediska velikosti čipu je tato úprava zanedbatelná, a proto bylo v návrhu ponecháno prvotní řešení.
+Tříbitový posuvný registr slouží k povolení detekce hodnoty CP\_END nejdříve po třech hodinových taktech \acs{TCKC}. Vyhodnocení hodnoty je zpožděno o tři takty, protože nejkratší možná délka této části sekvence jsou 4 bity. Platná hodnota CP\_BODY je tudíž nasunuta do 2-bitového posuvného registru nejdříve po třech taktech \acs{TCKC}, dle průběhu na obrázku \ref{fig:cJTAG_sel_cp_nop}. Tento posuvný registr je vždy před aktivační sekvencí synchronně resetován signálem \textit{sel\_rst}, který je generován vždy po skončení úvodní sekvence popsané v kapitole \ref{subsec:sel_escape_det}. Tuto deaktivaci po dobu tří taktů by bylo možné realizovat také čítačem od 0 do 3. Tato varianta řešení by ušetřila jeden klopný obvod, ale přidala jedno logické hradlo. Z hlediska velikosti čipu je tato úprava zanedbatelná, a proto bylo v návrhu ponecháno prvotní řešení.
 
-V případě, že jsou výše popsané podmínky pro ukončení aktivační sekvence splněny, je signálem CE povoleno překlopení posledního klopného obvodu s následující nástupnou hranou \acs{TCKC}. Signál \textit{online\_i} je tedy nastaven v rámci hodinového taktu, kdy je přijímán poslední bit aktivační sekvence označený \textit{Postamble}, dle formátu kontrolní části aktivační sekvence uvedeného v tabulce \ref{tab:cJTAG_sel_cp}. Signál CE všech klopných obvodů je opět deaktivován po dokončení aktivace a je tak zamezeno dalšímu překlápění. Signál \textit{online\_i} je využíván pro povolení funkcionality stavového automatu pro serializaci dat v případě dvouvodičové varianty protokolu a také povoluje propagaci hodinového signálu \acs{TCKC} pro další části obvodu. 
+V případě, že jsou výše popsané podmínky pro ukončení aktivační sekvence splněny, je signálem CE povoleno překlopení posledního klopného obvodu s následující nástupnou hranou \acs{TCKC}. Signál \textit{online\_i} je tedy nastaven v rámci hodinového taktu, kdy je přijímán poslední bit aktivační sekvence označený \textit{Postamble}, dle formátu kontrolní části aktivační sekvence uvedeného v tabulce \ref{tab:cJTAG_sel_cp}. Signál CE všech klopných obvodů je opět deaktivován po dokončení aktivace, a tím je zamezeno dalšímu překlápění. Signál \textit{online\_i} je využíván pro povolení funkcionality stavového automatu pro serializaci dat v případě dvouvodičové varianty protokolu a také povoluje propagaci hodinového signálu \acs{TCKC} pro další části obvodu. 
 
 Logické hradlo na výstupu registru pro nastavení \textit{online\_i} signálu využívá resetovací signál \textit{sel\_rst} k zapsání log. 0 na signál \textit{online\_i}, ihned se sestupnou hranou \acs{TCKC} ukončující "Escape" sekvenci. Bez této logické funkce docházelo v případě přepínání z dvouvodičové varianty k propagaci jedné periody hodinového signálu \acs{TCKC} i po "Escape" sekvenci, proto bylo třeba zaručit deaktivaci online režimu po celou dobu aktivační sekvence.
 
@@ -233,7 +233,7 @@ Logické hradlo na výstupu registru pro nastavení \textit{online\_i} signálu 
 \subsection{Stavový automat pro serializaci signálů čtyřvodičového rozhraní}	\label{subsec:oscan1_fsm}
 Zpracování serializovaných hodnot signálů odesílaných přes \acs{TMSC} pin dle formátu OSCAN1 popsaného v kapitole \ref{sec:oscan1} je realizováno pomocí jednoduchého stavového automatu, jehož stavový diagram je uvedený na obrázku \ref{fig:cJTAG_oscan1_fsm}. Stavový automat svůj stav mění se sestupnou hranou hodinového signálu \acs{TCKC}, protože hodnota \acs{TMSC} signálu se mění vždy se sestupnou hranou a na nástupnou je vzorkována.
 
-Výchozím stavem je stav \textbf{S\_IDLE}, ve kterém automat setrvává a je do něj vždy navrácen pokud nejsou signály \textit{online\_i} a \textit{jtag\_2w\_en} ve stavu log. 1. Tímto je zajištěna nečinnost automatu v průběhu aktivační sekvence a také, když je zvolena čtyřvodičová varianta \acs{JTAG} protokolu. Jakmile je aktivována dvouvodičová varianta přechází stavový automat do stavu \textbf{S\_nTDI}. V tomto stavu je navzorkována hodnota TDI na \acs{TMSC} pinu, přičemž hodnota je negována dle specifikace formátu OSCAN1. S další sestupnou hranou hodinového signálu přechází automat do stavu \textbf{S\_TMS}, kdy se vzorkuje hodnota TMS. Následuje přechod do posledního stavu \textbf{S\_TDO}, který povoluje signálem \textit{tck\_en\_2w} propagaci hodinového signálu \acs{TCKC} pro další zpracování. Dále je také na interní signál \textit{tmsc\_oen\_i}, povolující výstup pinu, přiřazena hodnota z převedeného čtyřvodičového rozhraní. Stavy \textbf{S\_nTDI},\textbf{S\_TMS} a \textbf{S\_TDO} se cyklicky opakují dokud není zahájena další aktivační sekvence.
+Výchozím stavem je stav \textbf{S\_IDLE}, ve kterém automat setrvává a je do něj vždy navrácen pokud nejsou signály \textit{online\_i} a \textit{jtag\_2w\_en} ve stavu log. 1. Tímto je zajištěna nečinnost automatu v průběhu aktivační sekvence a také, když je zvolena čtyřvodičová varianta \acs{JTAG} protokolu. Jakmile je aktivována dvouvodičová varianta přechází stavový automat do stavu \textbf{S\_nTDI}. V tomto stavu je navzorkována hodnota TDI na \acs{TMSC} pinu, přičemž hodnota je negována dle specifikace formátu OSCAN1. S další sestupnou hranou hodinového signálu přechází automat do stavu \textbf{S\_TMS}, kdy se vzorkuje hodnota TMS. Následuje přechod do posledního stavu \textbf{S\_TDO}, který povoluje signálem \textit{tck\_en\_2w} propagaci hodinového signálu \acs{TCKC} pro další zpracování. Dále je také na interní signál \textit{tmsc\_oen\_i}, povolující výstup pinu, přiřazena hodnota z převedeného čtyřvodičového rozhraní. Stavy \textbf{S\_nTDI}, \textbf{S\_TMS} a \textbf{S\_TDO} se cyklicky opakují, dokud není zahájena další aktivační sekvence.
 
 \begin{figure}[!h]
   \begin{center}
@@ -244,6 +244,6 @@ Výchozím stavem je stav \textbf{S\_IDLE}, ve kterém automat setrvává a je d
 \end{figure}
 
 \section{Zhodnocení návrhu modulu pro dvouvodičový \acs{JTAG} protokol}
-V této kapitole byl popsán formát přenosu dat přes dvouvodičové \acs{JTAG} rozhraní, popsána definice aktivační sekvence pro deaktivování probíhající komunikace a výběr jednotlivých variant \acs{JTAG} rozhraní definovaná standardem IEEE 1149.7. V rámci popisu možností byly zdůrazněny vlastnosti implementované v rámci této práce, přičemž standard IEEE 1149.7. definuje mnoho dalších možností. Dle standardu by byl návrh celého systému výrazně komplexnější a velmi náročný na implementaci. Pro implementaci byla tedy zvolena podpora dvouvodičového \acs{JTAG} rozhraní ve formátu OSCAN1 a možnost přepnou mezi dvou a čtyřvodičovým rozhraním. Zapojení do hvězdicové topologie, resetování v rámci deaktivační sekvence nebo pomocí hodnoty kontrolní části aktivační sekvence, jiné formáty serializace dat a další funkce definované standardem nebyly implementovány z důvodu jejich nepotřebnosti. \cite{IEEE_1149-7}
+V této kapitole byl popsán formát přenosu dat přes dvouvodičové \acs{JTAG} rozhraní, definice aktivační sekvence pro deaktivování probíhající komunikace a výběr jednotlivých variant \acs{JTAG} rozhraní, definovaná standardem IEEE 1149.7. V rámci popisu možností byly zdůrazněny vlastnosti implementované v rámci této práce, přičemž standard IEEE 1149.7. definuje mnoho dalších možností. Dle standardu by byl návrh celého systému výrazně komplexnější a velmi náročný na implementaci. Pro implementaci byla tedy zvolena podpora dvouvodičového \acs{JTAG} rozhraní ve formátu OSCAN1 a možnost přepnou mezi dvou a čtyřvodičovým rozhraním. Zapojení do hvězdicové topologie, resetování v rámci deaktivační sekvence nebo pomocí hodnoty kontrolní části aktivační sekvence, jiné formáty serializace dat a další funkce definované standardem nebyly implementovány z důvodu jejich nepotřebnosti. \cite{IEEE_1149-7}
 
-Navržený modul byl implementován jako převodník \acs{JTAG} rozhraní na původní čtyřvodičovou variantu a je taktován pouze hodinovým signálem \acs{TCKC} generovaným debuggerem. Toto řešení vyžadovalo poměrně malý zásah do stávajícího obvodu a díky výchozímu čtyřvodičovému rozhraní, nemá rozšíření systému vliv na stávající funkcionalitu.
+Navržený modul byl implementován jako převodník \acs{JTAG} rozhraní na původní čtyřvodičovou variantu a je taktován pouze hodinovým signálem \acs{TCKC} generovaným debuggerem. Toto řešení vyžadovalo poměrně malý zásah do stávajícího obvodu a díky výchozímu čtyřvodičovému rozhraní nemá rozšíření systému vliv na stávající funkcionalitu.
